2006-08-18  Duncan Mak  <duncan@a-chinaman.com>

	* src/glist.c: Implemented. Missing remove,
	remove_link and insert_before.

	* test/list.c: Tests for GList.

2006-08-17  Aaron Bockover  <abockover@novell.com>

	* src/gptrarray.c: Implemented g_ptr_array_remove and 
	g_ptr_array_remove_index

	* test/other: Removed, rewritten in Makefile.am

	* test/Makefile.am: Build test-eglib against local eglib and 
	test-glib against GLib 2.0 (replaces 'other')

	* test/ptrarray.c: Added tests for g_ptr_array_remove and
	g_ptr_array_remove_index

2006-08-17  Duncan Mak  <duncan@a-chinaman.com>

	* src/gslist.c: Added MIT license.
	(g_slist_insert_sorted): Forgot the case where the data is
	appended to the end of the list.

	* test/slist.c (test_slist_insert_sorted): Fix the test.	

2006-08-17  Aaron Bockover  <abockover@novell.com>

	* src/gptrarray.c: Added g_ptr_array_set_size implementation

	* test/ptrarray.c: Added test for g_ptr_array_set_size

2006-08-17  Miguel de Icaza  <miguel@novell.com>

	* src/glib.h: A handful of extra macros

	* configure.in, src/eglib-config.h.in: Set some system-specific
	settings that are probed at configure time.

2006-08-17  Aaron Bockover  <abockover@novell.com>

	* src/gptrarray.c: Added beginnings of GPtrArray (alloc, free, add, iterate)

	* src/glib.h: Added GPtrArray signatures

	* src/Makefile.am: Added gptrarray.c to build

	* test/ptrarray.c:
	* test/tests.h:
	* test/driver.c:
	* test/Makefile.am: Add ptrarray tests for available functionality

2006-08-17  Aaron Bockover  <abockover@novell.com>
	
	* test/test.h: 
	* test/test.c: Added group iterator/test driver functionality
	
	* test/driver.c: Added groups to run using new test functionality
	
	* test/slist.h:
	* test/hashtable.h:
	* test/string-util.h: Test group definitions for string util/hashtable

	* test/slist.c:
	* test/str.c: 
	* test/hash.c: Added test definition table 

	* test/Makefile.am: Added -Wall -Werror -D_FORTIFY_SOURCE=2
