@@ -11,12 +11,6 @@
        These will be replaced in metadata with two code paths, native
        Unix and native Windows.
 
-  g_unichar_
-
-       We probably do not need these anymore, we should kill the unmanaged
-       string collation and just leave the unmanaged string collation in
-       place.
-
 Routines missing from eglib, by count number:
 
      82 g_list_prepend
@@ -156,8 +150,4 @@ Macros:
       1 G_IO_PRI
       1 G_ALLOC_ONLY
 
-Unlikely that we will implement:
-
-      2 g_unichar_type
-      2 g_unichar_tolower
 
